<resources>
    <string name="app_name">MedFinder</string>

    <!--    OnBoarding Page Text    -->

    <string name="next">التالي</string>
    <string name="skip"><u>تخطي</u></string>

    <string name="text1">
        يمكن للمستخدم البحث عن الدواء الذى يريده و كذلك
        يمكن ان يحصل على الدواء من خلال ادخال صورة
        الروشتة و يمكن ان يبحث عن اي منتج اخر يريده
        مثل منتجات العناية بالبشرة و منتجات العناية بالشعر
        و غيرها من المنتجات.
    </string>

    <string name="text2">
        يمكن للمستخدم شراء او الاستعلام  الدواء او المنتج
        الذى يريده من اقرب صيدلية منه و التى يتوافر فيها كل
        الدواء او كل المنتجات التى يريدها او الدواء اللى
        الروشتة كله.
    </string>

    <string name="text3">
        يمكن للمستخدم الدفع كاش عند استلام المنتج او الدواء
        الذى تم طلبه كما يتمتع المستخدم بكثير من المميزات
        عند استخدامه للابليكشن و منها حساب السعرارات الحرارية
        لاحتياج الشخص اليومى و غيرها من المميزات التى
    تتيح للمستخدم.
    </string>
    <string name="start">إبدأ</string>


    <!--    Welcome Page Text     -->

    <string name="welcome_text">مرحبا بك في تطبيق MedFinder</string>
    <string name="login">تسجيل الدخول</string>
    <string name="singup">إنشاء حساب</string>
    <string name="as_guest">تصفح كضيف</string>


    <!--    Login Page Text     -->

    <string name="application_logo">Application Logo</string>
    <string name="password">كلمه المرور</string>
    <string name="required">مطلوب</string>
    <string name="txtUnderline1"><u>سجل دخول</u></string>
    <string name="txtForgetPass"><u>هل نسيت كلمة السر؟</u></string>
    <string name="txtUnderline2"><u>انشئ حساب</u></string>
    <string name="have_account">لديك حساب بالفعل؟</string>
    <string name="sign_up">تسجيل الدخول</string>
    <string name="Email">البريد الالكتروني</string>
    <string name="signUP">قم بتسجيل الدخول</string>

    <!--    Signup Page Text    -->

    <string name="welcomeMsg">مرحبا بك في تطبيق MedFinder</string>
    <string name="createAcc">إنشاء حساب</string>
    <string name="userName">اسم المستخدم</string>
    <string name="pass">كلمة المرور</string>
    <string name="confPass">تأكيد كلمة المرور</string>
    <string name="conf">تأكيد</string>
    <string name="haveAcc">لديك حساب بالفعل؟</string>
    <string name="enter_user_name">أدخل إسم المستخدم</string>
    <string name="signIN">تسجيل الدخول</string>
    <string name="passwordNotMatch">كلمات المرور ليست متطابقه</string>
    <string name="emailAlreadyUsed">الإيميل مستخدم من قبل</string>

    <!-- Alarm Page Text        -->

    <string name="medcin_alarm">منبة الدواء</string>
    <string name="this_day_no_medicine">هذا اليوم لا يحتوي على أي تنبيهات</string>
    <string name="dont_miss_take_medcin">لا تفوت جرعتك و أبدا فى أضافة تنبيهات</string>
    <string name="blue_circle">Blue Circle</string>
    <string name="temp">99:99 م</string>
    <string name="background">background</string>
    <string name="tempmed">بنادول</string>
    <string name="temprep">2 لكل مرة</string>
    <string name="check_marker_to_see_if_the_user_taken_the_medicine_or_not">check marker to see if the user taken the medicine or not</string>
    <string name="floating_action_button">Floating Action button</string>
    <string name="TimesInDay">عدد المرات خلال اليوم</string>
    <string name="numberOfBills">العدد لكل مره</string>
    <string name="back_to_alarm_page">Back to alarm page</string>
    <string name="repitation">التكرار</string>
    <string name="JustToday">اليوم الحالي فقط</string>
    <string name="medicenName">إسم الدواء</string>
    <string name="notes">ملحوظات</string>

    <!--    OTP Page Text-->
    <string name="enter_otp">ادخل رمز التحقق</string>
    <string name="otp_send">تم إرسال رمز مكون من 4 أرقام إلى بريدك الإلكتروني</string>
    <string name="otp_wrong">*الرمز الذي قمت بادخاله خاطئ. برجاء المحاولة مره اخري</string>

    <string name="chooseTime">إختار</string>
    <string name="otp">رمز تأكيد الايميل</string>
    <string name="resendOtp">إعادة إرسال الرمز</string>
    <string name="checkOtp">تحقق</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="createNewPassword">إنشاء كلمة مرور جديدة</string>
    <string name="enterNewPassword">ادخل كلمة المرور الجديدة</string>
    <string name="confNewPassword">تاكيد كلمة المرور</string>
    <string name="forgetPassword">هل نسيت كلمة المرور ؟</string>
    <string name="enterEmail">ادخل البريد الاكتروني</string>
    <string name="send">إرسال</string>

    <!--    More Page Text-->
    <string name="remember_medicine">تذكير بالأدوية</string>
    <string name="bmi_bmr_calculate">حساب معدل كتلة الجسم أو معدل الحرق</string>
    <string name="myAcc">حسابي</string>
    <string name="shareApp">مشاركه التطبيق</string>
    <string name="signout">تسجيل الخروج</string>
    <string name="more">المزيد</string>

    <!--    My Account Page Text-->
    <string-array name="gender">
        <item>ذكر</item>
        <item>أنثى</item>
    </string-array>

    <!--                     All Products Strings              -->

    <!--    Dental Care items-->
    <string name="allDentalCare">كل منتجات العناية بالاسنان</string>
    <string name="mouthCare">العناية بالفم</string>
    <string name="toothBrush">فرشاة الأسنان</string>
    <string name="toothPaste">معجون الأسنان</string>

    <!--    Men Products items-->
    <string name="allMenProducts">كل منتجات الرجل</string>
    <string name="shavingGel">جل الحلاقة</string>
    <string name="deodorantForMen">مزيل العرق للرجال</string>
    <string name="shavingSupplies">مستلزمات الحلاقة</string>

    <!--    Mother and Child items-->
    <string name="allMotherAndChild">كل منتجات الأم و الطفل</string>
    <string name="childMilk">لبن الأطفال</string>
    <string name="diapersAndCreams">الحفاضات و الكريمات</string>
    <string name="motherCare">العناية بالأم</string>

    <!--    Women Products items-->
    <string name="allWomenProducts">كل منتجات المرأة</string>
    <string name="hairRemoval">إزالة الشعر</string>
    <string name="deodorantForWomen">مزيل العرق للسيدات</string>
    <string name="sanitaryPads">الفوط الصحية</string>

    <!--    Virus Protection items-->
    <string name="allVirusProtection">كل منتجات الحماية من الفيروسات</string>
    <string name="immunityBooster">تقوية المناعة</string>
    <string name="medicalMasksAndGloves">الكمامات و القفازات</string>
    <string name="handSanitizers">مطهرات اليد</string>

    <!--    Skin And Hair items-->
    <string name="allSkinAndHairProducts">كل منتجات العناية بالبشرة و الشعر</string>
    <string name="sunProtection">الحماية من الشمس</string>
    <string name="handAndFeetProtection">العناية باليد و القدم</string>
    <string name="skinWhitening">تفتيح البشرة</string>
    <string name="faceWash">غسول الوجة</string>
    <string name="faceMasks">ماسكات الوجة</string>
    <string name="makeupRemoval">مزيل المكياج</string>
    <string name="hairConditioner">بلسم الشعر</string>
    <string name="shampoo">شامبو</string>
    <string name="topicalPainRelievers">مسكنات الالام الموضوعية</string>

    <!--    Products items-->
    <string name="allMedicines">كل الأدوية</string>
    <string name="coldAndFlu">البرد و السعال</string>
    <string name="painkillers">مسكنات</string>
    <string name="minorBurns">الحروق البسيطة</string>
    <string name="virusProtection">الحماية من الفيروسات</string>
    <string name="acidityAndPoorDigestion">الحموضة وسوء الهضم</string>
    <string name="womenHealth">صحة المرأة</string>
    <string name="cough">الكحة</string>
    <string name="colic">المغص</string>
    <string name="constipation">الإمساك</string>
    <string name="topicalAntibiotics">مضادات حيوية موضوعية</string>
    <string name="vitaminsAndNutritionalSupplements">الفيتامينات و المكملات الغذائية</string>
    <string name="sugarAlternitave">بديل للسكر</string>

    <!--    Bmi And Bmr items-->
    <string name="CM">سم</string>
    <string name="YourAge">كم عمرك؟</string>
    <string name="KM">كجم</string>
    <string name="editTxt">تعديل</string>
    <string name="Clctxt">حساب</string>
    <string-array name="Gender">
        <item>ذكر</item>
        <item>أنثى</item>
    </string-array>


    <string name="no_favorite_items">لا توجد أي منتجات مفضلة لديك</string>
    <string name="favorite">المنتجات المفضلة</string>

    <!--    Cart-->
    <string name="cart">عربة التسوق</string>
    <string name="emptyCart">عربة التسوق فارغه</string>
    <string name="noItemsInCart">يبدو أنك لم تضف أي عناصر إالى سلة التسوق الخاصة بك </string>
    <string name="priceMayChange">قد تخلتف الأسعار بين الصيدليات</string>
    <string name="continueShopping">استمر بالتسوق</string>
    <string name="todo">TODO</string>
    <string name="showAll">عرض الكل</string>
    <string name="searchForProduct">أبحث
        عن الأدوية</string>
    <string name="search">أبحث</string>
    <string name="forMedicine">عن الأدوية</string>
    <string name="image_for_search_for_medicine">Image For Search for medicine</string>
    <string name="useInsuranceCard">استخدم كارت التامين</string>
    <string name="orderEasily">و اطلب ادويتك بسهوله الأن</string>
    <string name="searchCategories">تصفح الأقسام</string>
    <string name="searchcamera">searchCamera</string>
    <string name="camera_icon_for_search_by_image">Camera icon for search by image</string>
    <string name="confirmNewPassword">تأكيد كلمة المرور الجديدة</string>
    <string name="newPassword">كلمة المرور الجديدة</string>
    <string name="currentPassword">كلمة المرور الحالية</string>
    <string name="searchResults">نتائج البحث</string>
    <string name="sure_about_signout">هل أنت متأكد من تسجيل الخروج ؟</string>
    <string name="cancel">إلغاء</string>
    <string name="signout_button">تسجيل الخروج</string>

    <string name="repetition_only_today">اليوم الحالي فقط</string>
    <string name="repetition_every_day">كل يوم</string>
    <string name="repetition_day_and_day">يوم و يوم</string>
</resources>