<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.signinFragments.WelcomeFragment">

        <ImageView
            android:id="@+id/application_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160sp"
            android:contentDescription="@string/application_logo"
            android:src="@drawable/vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/welcome_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/application_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="100sp"
            android:layout_marginEnd="16sp"
            android:backgroundTint="@color/blue_main"
            android:fontFamily="@font/cairo_regular"
            android:padding="10dp"
            android:shadowColor="@color/black"
            android:shadowDy="20.0"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/blue_main"
            android:fontFamily="@font/cairo_regular"
            android:padding="10dp"
            android:shadowColor="@color/black"
            android:shadowDy="20.0"
            android:text="@string/singup"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/as_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/cairo_regular"
            android:text="@string/as_guest"
            android:textColor="@color/text_sec"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_button"
            app:layout_constraintVertical_bias="0.51" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>