<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".authentication.signinFragments.signup.VerifyFragment">

    <TextView
        android:id="@+id/welcomeSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/welcomeMsg"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33sp"
        android:layout_height="33sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="35sp"
        android:contentDescription="@string/application_logo"
        android:src="@drawable/vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/welcomeSignUp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/otpImage"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        android:contentDescription="@string/application_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/enter_otp_key"
        app:layout_constraintBottom_toTopOf="@id/otpTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/otpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/enter_otp"
        android:textColor="#1f1f1f"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/otpSendTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpImage" />

    <TextView
        android:id="@+id/otpSendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/cairo_regular"
        android:text="@string/otp_send"
        android:textColor="#1f1f1f"
        app:layout_constraintBottom_toTopOf="@id/otpView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpTextView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />


    <com.chaos.view.PinView
        android:id="@+id/otpView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"
        android:cursorVisible="true"
        android:fontFamily="@font/cairo_medium"
        android:hint="@string/otp"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cursorColor="#676767"
        app:cursorWidth="1sp"
        app:itemCount="4"
        app:itemHeight="48sp"
        app:itemRadius="10sp"
        app:itemSpacing="16sp"
        app:itemWidth="48sp"
        app:layout_constraintBottom_toTopOf="@+id/otpCheckButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpSendTextView"
        app:lineColor="#676767"
        app:lineWidth="1sp"
        app:viewType="rectangle" />

    <TextView
        android:id="@+id/otpWrongMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/cairo_medium"
        android:text="@string/otp_wrong"
        android:textColor="@color/red_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/otpCheckButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/cairo_medium"
        android:padding="8sp"
        app:backgroundTint="@color/blue_main"
        android:text="@string/checkOtp"
        android:textSize="18sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toTopOf="@+id/resendOtpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpView"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resendOtpButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/cairo_medium"
        android:padding="8sp"
        android:text="@string/resendOtp"
        android:textColor="#1f1f1f"
        android:textSize="18sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpCheckButton"
        app:strokeColor="#1f1f1f"
        app:strokeWidth="1sp" />
</androidx.constraintlayout.widget.ConstraintLayout>