<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signinFragments.login.SendCodeToMailFragment">

    <TextView
        android:id="@+id/welcomeSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/welcomeMsg"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33sp"
        android:layout_height="33sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="35sp"
        android:contentDescription="@string/application_logo"
        android:src="@drawable/vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/welcomeSignUp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/forgetPasswordTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/forgetPassword"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterEmailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32sp"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        app:errorEnabled="true"
        android:hint="@string/enterEmail"
        android:theme="@style/EditTextTheme"
        app:boxStrokeColor="@color/input_layout_stroke_color"
        android:textColorHint="@color/grey_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgetPasswordTextview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EnterEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:fontFamily="@font/cairo_regular"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/cairo_semibold"
        android:padding="8sp"
        android:text="@string/send"
        app:backgroundTint="@color/blue_main"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterEmailLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>