<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.signinFragments.login.ChangePasswordFragment">

    <TextView
        android:id="@+id/welcomeSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/welcomeMsg"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="33sp"
        android:layout_height="33sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="35sp"
        android:contentDescription="@string/application_logo"
        android:src="@drawable/vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/welcomeSignUp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/newPasswordTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/cairo_semibold"
        android:text="@string/createNewPassword"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16sp"
        android:layout_marginEnd="16sp"
        android:hint="@string/enterNewPassword"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        android:layout_marginBottom="20sp"
        app:boxCornerRadiusTopStart="10sp"
        app:boxStrokeColor="#676767"
        app:hintTextColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordTextview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:inputType="textVisiblePassword"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confNewPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp"
        android:hint="@string/confNewPassword"
        app:boxCornerRadiusBottomEnd="10sp"
        app:boxCornerRadiusBottomStart="10sp"
        app:boxCornerRadiusTopEnd="10sp"
        app:boxCornerRadiusTopStart="10sp"
        app:boxStrokeColor="#676767"
        app:hintTextColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confNewPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:inputType="textVisiblePassword"
            android:textColor="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/cairo_semibold"
        android:padding="8sp"
        android:text="@string/conf"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confNewPasswordLayout" />

    <TextView
        android:id="@+id/passwordNotMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confNewPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="*كلمات المرور غير متطابقه"
        android:fontFamily="@font/cairo_regular"
        android:textColor="@color/red_text"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginEnd="16sp"
        android:textSize="14sp"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>